--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "dev": "nodemon index.js"
   },
   "type": "module",
   "keywords": [],
